--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,3 @@
 @import "./Partials/_principalstyle";
-@import "./Partials/_principalstyle"
+@import "./Partials/_store"
+@import "./Partials/_contacto"
